welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:9: error: not found: value a
  a=2
  ^golomb:13: error: not found: value ?:
  var o?:Int=3
       ^