welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
  if (num == 1){
    return 1
  }
  if(num==2){
    return 2
  }
  var T= new Array[Int](num)
  a=2
  T(0)=1
  T(1)=2
  T(2)=2
  var o?:Int=3
  var quoi:Int=3
  while (o?<=num-1){
    for (l<-0 to T(quoi-1)-1){
      T(o?+l)=quoi
    	o?=o?+1
    }
    quoi = quoi+1
  }
  return T(num-1)
}